2014-03-16  Josh Triplett <josh@joshtriplett.org>

	* testsuite/libffi.call/closure_stdcall.c,
	testsuite/libffi.call/closure_thiscall.c: Remove fragile stack pointer
	checks.  These files included inline assembly to save the stack
	pointer before and after the call, and compare the values.  However,
	compilers can and do leave the stack in different states for these two
	pieces of inline assembly, such as by saving a temporary value on the
	stack across the call; observed with gcc -Os, and verified as spurious
	through careful inspection of disassembly.

2014-03-16  Josh Triplett <josh@joshtriplett.org>

	* testsuite/libffi.call/many.c: Avoid spurious failure due to excess
	floating-point precision.
	* testsuite/libffi.call/many_win32.c: Ditto.

2014-03-16  Josh Triplett <josh@joshtriplett.org>

	* libtool-ldflags: Re-add.

2014-03-16  Josh Triplett <josh@joshtriplett.org>

	* Makefile.in, aclocal.m4, compile, config.guess, config.sub,
	configure, depcomp, include/Makefile.in, install-sh, libtool-ldflags,
	ltmain.sh, m4/libtool.m4, m4/ltoptions.m4, m4/ltsugar.m4,
	m4/ltversion.m4, m4/lt~obsolete.m4, man/Makefile.in, mdate-sh,
	missing, testsuite/Makefile.in: Delete autogenerated files from
	version control.
	* .gitignore: Add autogenerated files.
	* autogen.sh: New script to generate the autogenerated files.
	* README: Document requirement to run autogen.sh when building
	directly from version control.
	* .travis.yml: Run autogen.sh

2014-03-14  Anthony Green <green@moxielogic.com>

	* configure, Makefile.in: Rebuilt.

2014-03-10  Mike Hommey <mh+mozilla@glandium.org>

	* configure.ac: Allow building for mipsel with Android NDK r8.
	* Makefile.am (AM_MAKEFLAGS): Replace double quotes with single quotes.

2014-03-10  Landry Breuil <landry@openbsd.org>

	* configure.ac: Ensure the linker supports @unwind sections in libffi.

2014-03-01  Anthony Green  <green@moxielogic.com>

	* Makefile.am (EXTRA_DIST): Replace old scripts with